add certificates page

--- a/src/main.css
+++ b/src/main.css
@@ -242,7 +242,9 @@ button.btn.icon{
 
 }
 
-
+.bg-card{
+    background-color: var(--primary-foreground);
+}
 .text-muted-foreground {
     color: var(--muted-foreground);
 }
